fix the home scroll issue and project image stretch

--- a/src/stylesheets/home.css
+++ b/src/stylesheets/home.css
@@ -1,8 +1,8 @@
 .Home-pageContainer {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  justify-content: space-between;
+  /* height: 100vh; */
+  /* justify-content: space-between; */
 }
 
 .Home-container {
